--- a/stocktrade/src/main/resources/templates/fragments/tabela/tabelaAcoesUser.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/tabelaAcoesUser.html
@@ -6,7 +6,7 @@
         <tr>
           <th scope="col">SIGLA</th>
           <th scope="col">PREÇO ATUAL</th>
-          <th scope="col">PREÇO MÉDIO</th>
+          <th scope="col">PREÇO MÉDIO COMPRA</th>
           <th scope="col">VARIAÇÃO</th>
           <th scope="col">QUANTIDADE</th>
           <th scope="col">OPÇÕES</th>
@@ -14,12 +14,14 @@
       </thead>
       <tbody>
         <tr th:each="acao : ${acoesUsuario}">
-          <td th:text="${acao.sigla}"></td>
-          <td th:text="'R$ ' + ${acao.valor}"></td>
-          <td>???</td>
-          <td>???</td>
-          <td>???</td>
-          <td>???</td>
+          <td th:text="${acao[0]}"></td>
+          <td th:text="'R$ ' + ${acao[2]}"></td>
+          <td th:text="'R$ ' + ${acao[3]}"></td>
+          <td th:text="${acao[4]} + '%'"></td>
+          <td th:text="${acao[1]}"></td>
+          <td><svg width="19" height="19" viewBox="0 0 1024 1024" class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg">
+            <path d="M903.232 256l56.768 50.432L512 768 64 306.432 120.768 256 512 659.072z" fill="#fff" />
+          </svg></td>
         </tr>
       </tbody>
     </table>
