feat: :lipstick: Opção de expandir ação feita
Depois de clicar uma ação, é possível expandir para desejar comprar mais delas

--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -513,6 +513,170 @@ h4 {
   margin-left: 400px;
 }
 
+/* CSS ACORDEAO TABLE */
+.container-acordeao {
+  margin-top: 40px;
+  margin-left: auto;
+  width: 550px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 2fr 1fr 1fr 2fr 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  letter-spacing: 1.5px;
+  grid-template-areas:
+    "label-comprar label-vender"
+    "input-quantidade preco-atual"
+    "label-valor-total-operacao valor-total-da-operacao"
+    "label-saldo-atual saldo-atual"
+    "senha-autenticacao senha-autenticacao"
+    "button-comprar button-comprar";
+}
+
+.button-comprar { 
+  margin-top: -50px;
+  grid-area: button-comprar; 
+  width: auto;
+}
+
+.button-comprar button {
+  width: 100%;
+  height: 37px;
+  background-color: #40F201;
+  color: #010D50;
+  border-radius: 37px;
+  border: 0;
+}
+
+.senha-autenticacao { 
+  margin-top: -40px;
+  grid-area: senha-autenticacao; 
+}
+
+.senha-autenticacao img { 
+  width: 21px;
+  height: auto;
+  margin-bottom: 7px;
+  margin-right: 7px;
+}
+
+.senha-autenticacao input { 
+  width: 325px;
+}
+
+.label-saldo-atual { 
+  margin-top: -35px;
+  grid-area: label-saldo-atual; 
+}
+
+.saldo-atual { 
+  margin-top: -35px;
+  grid-area: saldo-atual; 
+}
+
+.label-valor-total-operacao { 
+  margin-top: -30px;
+  grid-area: label-valor-total-operacao; 
+}
+
+.valor-total-da-operacao {
+  margin-top: -30px;
+  grid-area: valor-total-da-operacao; 
+}
+
+.input-quantidade { 
+  height: auto;
+  grid-area: input-quantidade; 
+}
+
+.input-quantidade p { 
+  margin-bottom: 0px;
+}
+
+.preco-atual { 
+  grid-area: preco-atual; 
+}
+
+.preco-atual p:first-child { 
+  margin-bottom: 10px;
+}
+
+.preco-atual p:last-child { 
+  margin-bottom: 0px;
+}
+
+.label-comprar {
+  color: #40F201;
+  grid-area: label-comprar; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.label-comprar p {
+  margin-bottom: 10px;
+}
+
+.label-comprar .label-comprar-line {
+  height: 2px;
+  width: 75%;
+  background-color: #40F201;
+}
+
+.label-vender { 
+  color: #E30101;
+  grid-area: label-vender; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.label-vender p {
+  margin-bottom: 10px;
+}
+
+.label-vender .label-vender-line {
+  height: 2px;
+  width: 75%;
+  background-color: #E30101;
+}
+
+.custom-input-acoes {
+  border-radius: 100%;
+  background-color: var(--dark-blue);
+  color: var(--white);
+  border: none;
+  border-radius: 40px;
+  width: 100%;
+  height: 40px;
+  padding: 3px 3px 3px 10px;
+}
+
+.custom-input-acoes::placeholder {
+  color: var(--white);
+}
+
+.custom-input-acoes:focus {
+  background-color: rgb(95, 95, 95);
+  border-color: var(--gray);
+  box-shadow: none;
+  color: var(--white) !important;
+}
+
+.div-input-senha-autenticacao {
+  display: flex;
+}
+
+.div-input-senha-autenticacao svg {
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
+
 /* CSS NAVBAR */
 .navbar {
   background-color: #010725; 
