--- a/stocktrade/src/main/resources/templates/carteira.html
+++ b/stocktrade/src/main/resources/templates/carteira.html
@@ -142,6 +142,13 @@
 
   <script>
 
+    function limitSenhaAutenticacao(input) {
+      input.value = input.value.replace(/\D/g, ""); // permite apenas dígitos
+      if (input.value.length > 4) {
+        input.value = input.value.slice(0, 4); // limita a 4 dígitos
+      }
+    }
+
     function verificarCamposSolicitacaoCompra(event) {
       const acoes = document.getElementsByClassName('quantidadeAcoesInput')
       const senhas = document.getElementsByClassName('senhaAutenticacaoInput')
@@ -149,7 +156,7 @@
       j = acoes.length;
 
       for (i = 0; i < acoes.length; i++) {
-        
+
         if (acoes.item(i).value != "" && senhas.item(i).value != "") {
 
           const siglaAcao = document.getElementById("siglaAcao" + i)
@@ -176,30 +183,30 @@
       }
 
       fetch("/carteira/comprar", {
-          method: "post",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify(data),
+        method: "post",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify(data),
+      })
+        .then((response) => {
+          if (response.ok) {
+            window.location.href = "/carteira";
+          } else {
+            response.json().then(data => {
+              senhaError.textContent = data.message;
+            });
+          }
         })
-          .then((response) => {
-            if (response.ok) {
-              window.location.href = "/carteira";
-            } else {
-              response.json().then(data => {
-                senhaError.textContent = data.message;
-              });
-            }
-          })
-          .catch((error) => {
-            alert("Ocorreu um erro ao cadastrar!");
-            console.error(error);
-          });
+        .catch((error) => {
+          alert("Ocorreu um erro ao comprar!");
+          console.error(error);
+        });
     }
-    
+
   </script>
 
-  
+
 </body>
 
 </html>
