refactor: :lipstick: Troca de cor do botão de venda
Mudança da cor do botão de venda para tornar mais legível

--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -681,7 +681,7 @@ h4 {
 .button-vender button {
   width: 100%;
   background-color: #E30101;
-  color: #010D50;
+  color: white;
   border-radius: 37px;
   border: 0;
   padding: 5px;
