--- a/stocktrade/src/main/resources/templates/fragments/tabela/secao/secaoComprarAcao.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/secao/secaoComprarAcao.html
@@ -11,7 +11,7 @@
       <p class="text-uppercase">Quantidade</p>
       <input
           type="text"
-          class="form-control custom-input-acoes quantidadeAcoesInput"
+          class="form-control custom-input-acoes quantidadeAcoesInputCompra"
           placeholder="Insira a quantidade de ações"
         />
     </div>
@@ -42,7 +42,7 @@
       <div class="div-input-senha-autenticacao">
         <input
           type="password"
-          class="form-control custom-input-acoes senhaAutenticacaoInput"
+          class="form-control custom-input-acoes senhaAutenticacaoInputCompra"
           placeholder="Senha de autenticação"
           oninput="limitSenhaAutenticacao(this)"
         />
