--- a/stocktrade/src/main/resources/templates/invistaLogado.html
+++ b/stocktrade/src/main/resources/templates/invistaLogado.html
@@ -1,109 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head
-    th:replace="~{fragments/headFragment :: head('StockTrade - Invista')}"
-  ></head>
-  <body id="sobre-page">
-    <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
-    <main>
-      <div
-        th:replace="~{fragments/headerLogadoFragment :: header('Invista')}"
-      ></div>
+<head th:replace="~{fragments/headFragment :: head('StockTrade - Invista')}"></head>
 
-      <div class="col-12">
-        <h2 class="text-left custom-margin-left">Invista</h2>
+<body id="sobre-page">
+  <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
+
+  <main>
+    <div th:replace="~{fragments/headerLogadoFragment :: header('Invista')}"></div>
+
+    <div class="col-12">
+      <h2 class="text-left custom-margin-left">Invista</h2>
+    </div>
+    <div class="col-12">
+      <div class="d-flex align-items-center">
+        <h6 class="text-left custom-margin-left mb-0 me-2">Saldo Atual</h6>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye ml-2"
+          viewBox="0 0 16 16" id="toggleEye">
+          <path
+            d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z" />
+          <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z" />
+        </svg>
       </div>
-      <div class="col-12">
-        <div class="d-flex align-items-center">
-          <h6 class="text-left custom-margin-left mb-0 me-2">Saldo Atual</h6>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-eye ml-2"
-            viewBox="0 0 16 16"
-            id="toggleEye"
-          >
-            <path
-              d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"
-            />
-            <path
-              d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"
-            />
-          </svg>
-        </div>
-        <p class="h3 fs-8 custom-margin-left" id="saldo">R$<span th:text="${session.usuarioLogado.saldo}"></span></p>
-        <div class="d-flex align-items-center">
-          <p class="h3 fs-8 custom-margin-left mt-4">Ativos Disponíveis</p>
-          <form class="d-flex custom-margin-left2">
-            <input
-              class="form-control me-2 input-custom"
-              type="search"
-              placeholder="Busque no site..."
-              aria-label="Search"
-            />
-            <button
-              class="btn btn-outline-success btn-custom"
-              type="submit"
-            >
-              Pesquisar
-            </button>
-          </form>
-        </div>
-        
-        
+      <p class="h3 fs-8 custom-margin-left" id="saldo">R$<span th:text="${session.usuarioLogado.saldo}"></span></p>
+      <div class="d-flex align-items-center">
+        <p class="h3 fs-8 custom-margin-left mt-4">Ativos Disponíveis</p>
+        <form class="d-flex custom-margin-left2">
+          <input class="form-control me-2 input-custom" type="search" placeholder="Busque no site..."
+            aria-label="Search" />
+          <button class="btn btn-outline-success btn-custom" type="submit">
+            Pesquisar
+          </button>
+        </form>
       </div>
 
-      <div class="container mb-4 justify-content-center">
-        <div class="container row justify-content-center">
-          <div th:replace="~{fragments/tabela/tabelaInvistaLogado :: tabelaInvistaLogado}"></div>
-        </div>
-      </div>
-    </main>
 
-    <script>
-      // Função para alternar a visibilidade do saldo quando o ícone do olho é clicado
-      document
-        .getElementById("toggleEye")
-        .addEventListener("click", function () {
-          const saldo = document.getElementById("saldo");
-          if (saldo.style.opacity === "0") {
-            saldo.style.opacity = "1";
+    </div>
+
+    <div class="container mb-4 justify-content-center">
+      <div class="container row justify-content-center">
+        <div th:replace="~{fragments/tabela/tabelaInvistaLogado :: tabelaInvistaLogado}"></div>
+      </div>
+    </div>
+  </main>
+
+  <script>
+    // Função para alternar a visibilidade do saldo quando o ícone do olho é clicado
+    document
+      .getElementById("toggleEye")
+      .addEventListener("click", function () {
+        const saldo = document.getElementById("saldo");
+        if (saldo.style.opacity === "0") {
+          saldo.style.opacity = "1";
+        } else {
+          saldo.style.opacity = "0";
+        }
+      });
+  </script>
+
+  <footer th:replace="~{fragments/footerFragment :: footer}"></footer>
+
+  <script>
+
+    function sumirContainerCompraEAparecerContainerVender(event) {
+      const containerCompra = document.getElementsByClassName("container-comprar");
+      const containerVender = document.getElementsByClassName("container-vender");
+
+      console.log("sumindo" + containerCompra.length)
+
+      for (i = 0; i < containerCompra.length; i++) {
+        containerCompra.item(i).style.display = "none";
+        containerVender.item(i).style.display = "grid";
+      }
+    }
+
+    function sumirContainerVenderEAparecerContainerCompra(event) {
+      const containerCompra = document.getElementsByClassName("container-comprar");
+      const containerVender = document.getElementsByClassName("container-vender");
+
+      console.log("sumindo" + containerCompra.length)
+
+      for (i = 0; i < containerCompra.length; i++) {
+        containerCompra.item(i).style.display = "grid";
+        containerVender.item(i).style.display = "none";
+      }
+    }
+  </script>
+
+  <script>
+
+    function limitSenhaAutenticacao(input) {
+      input.value = input.value.replace(/\D/g, ""); // permite apenas dígitos
+      if (input.value.length > 4) {
+        input.value = input.value.slice(0, 4); // limita a 4 dígitos
+      }
+    }
+
+    function verificarCamposSolicitacaoCompra(event) {
+      const acoes = document.getElementsByClassName('quantidadeAcoesInputCompra')
+      const senhas = document.getElementsByClassName('senhaAutenticacaoInputCompra')
+
+      j = acoes.length;
+
+      for (i = 0; i < acoes.length; i++) {
+
+        console.log("validando " + i)
+
+        if (acoes.item(i).value != "" && senhas.item(i).value != "") {
+
+          const siglaAcao = document.getElementById("siglaAcao" + i)
+          console.log("siglaAcao" + i)
+          console.log("sigla acao:" + siglaAcao)
+
+          enviarSolicitacaoCompra(event, acoes.item(i).value, senhas.item(i).value, siglaAcao.innerText)
+          break;
+        }
+        j--;
+      }
+
+      if (j == 0) {
+        alert("Preencha todos os campos obrigatórios")
+      }
+    }
+
+    function enviarSolicitacaoCompra(event, quantidadeAcoes, senhaAutenticacao, siglaAcao) {
+
+      console.log(quantidadeAcoes + " " + senhaAutenticacao + " " + siglaAcao)
+
+      const data = {
+        siglaAcao: siglaAcao,
+        quantidadeAcoes: quantidadeAcoes,
+        senhaAutenticacao: senhaAutenticacao
+      }
+
+      fetch("/invistaLogado/comprar", {
+        method: "post",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify(data),
+      })
+        .then((response) => {
+          if (response.ok) {
+            window.location.href = "/invistaLogado";
           } else {
-            saldo.style.opacity = "0";
+            console.log(response.data);
+            response.json().then(data => {
+              const senhaError = document.getElementById("senha-error");
+              senhaError.textContent = data.message;
+            });
           }
+        })
+        .catch((error) => {
+          alert("Ocorreu um erro ao comprar!");
+          console.error(error);
         });
-    </script>
+    }
 
-    <footer th:replace="~{fragments/footerFragment :: footer}"></footer>
+  </script>
+</body>
 
-    <script>
-
-      function sumirContainerCompraEAparecerContainerVender(event) {
-        const containerCompra = document.getElementsByClassName("container-comprar");
-        const containerVender = document.getElementsByClassName("container-vender");
-  
-        console.log("sumindo" + containerCompra.length)
-  
-        for (i = 0; i < containerCompra.length; i++) {
-          containerCompra.item(i).style.display = "none";
-          containerVender.item(i).style.display = "grid";
-        }
-      }
-  
-      function sumirContainerVenderEAparecerContainerCompra(event) {
-        const containerCompra = document.getElementsByClassName("container-comprar");
-        const containerVender = document.getElementsByClassName("container-vender");
-  
-        console.log("sumindo" + containerCompra.length)
-  
-        for (i = 0; i < containerCompra.length; i++) {
-          containerCompra.item(i).style.display = "grid";
-          containerVender.item(i).style.display = "none";
-        }
-      }
-    </script>
-  </body>
 </html>
