feat: :sparkles: Implementação da barra de pesquisa de ações na tela Invista
Foi implementada a pesquisa de ações pela sigla ou pelo nome da empresa, de modo "Case Insensitive". Ainda, foram ajustados aspectos estéticos do código como o nome de InvistaLogadoController e a adição completa do padrão UsuarioFactory no TestConfig

#65

--- a/stocktrade/src/main/resources/templates/fragments/headFragment.html
+++ b/stocktrade/src/main/resources/templates/fragments/headFragment.html
@@ -29,7 +29,7 @@
   </style>
 
   <!-- Custom styles for this template -->
-  <link href="css/stylesheet.css" rel="stylesheet" />
+  <link href="../css/stylesheet.css" rel="stylesheet" />
 
   <!-- HEAD DOS GRAFICOS -->
 
