--- a/stocktrade/src/main/resources/templates/fragments/headerLogadoFragment.html
+++ b/stocktrade/src/main/resources/templates/fragments/headerLogadoFragment.html
@@ -2,7 +2,7 @@
   <header class="d-flex align-items-center justify-content-between py-3 mb-4 flex-nowrap mx-5">
     <!-- logo -->
     <a href="/">
-      <img src="images/logo-bg-off.png" alt="Logo" class="img-fluid logo small-logo2 me-5" />
+      <img src="../images/logo-bg-off.png" alt="Logo" class="img-fluid logo small-logo2 me-5" />
     </a>
 
     <ul class="nav col-12 col-md-auto mb-2 mb-md-0 me-auto">
