--- a/stocktrade/src/main/resources/templates/fragments/tabela/secao/secaoComprarAcao.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/secao/secaoComprarAcao.html
@@ -18,7 +18,7 @@
 
     <div class="preco-atual text-uppercase fw-bold">
       <p>Preço atual</p>
-      <p th:text="'R$ ' + ${acao[2]}"></p>
+      <p th:text="'R$ ' + ${acao[1]}"></p>
     </div>
 
     <div class="label-valor-total-operacao text-uppercase text-start fw-bold">
@@ -38,7 +38,7 @@
     </div>
 
     <div class="senha-autenticacao text-start fw-bold">
-      <img src="icons/seguranca2-icon.png"><span class="text-uppercase">Insira sua senha de Autenticação</span>
+      <img src="../icons/seguranca2-icon.png"><span class="text-uppercase">Insira sua senha de Autenticação</span>
       <div class="div-input-senha-autenticacao">
         <input
           type="password"
