--- a/stocktrade/src/main/resources/templates/fragments/footerFragment.html
+++ b/stocktrade/src/main/resources/templates/fragments/footerFragment.html
@@ -5,7 +5,7 @@
     <!-- Logo à esquerda -->
     <a href="/">
       <img
-        src="images/logo-bg-off.png"
+        src="../images/logo-bg-off.png"
         alt="Logo"
         class="logo small-logo2 me-5 ms-5"
       />
@@ -13,11 +13,11 @@
 
     <!-- Imagens à direita -->
     <div class="d-flex">
-      <a th:replace="~{fragments/footer/iconLinkFooter :: iconLinkFooter('images/insta.png', 'Instagram', 'https://www.instagram.com/stock.trade.rp4/')}"></a>
+      <a th:replace="~{fragments/footer/iconLinkFooter :: iconLinkFooter('../images/insta.png', 'Instagram', 'https://www.instagram.com/stock.trade.rp4/')}"></a>
 
-      <a th:replace="~{fragments/footer/iconLinkFooter :: iconLinkFooter('images/facebook.png', 'Facebook', 'https://www.facebook.com/?locale=pt_BR')}"></a>
+      <a th:replace="~{fragments/footer/iconLinkFooter :: iconLinkFooter('../images/facebook.png', 'Facebook', 'https://www.facebook.com/?locale=pt_BR')}"></a>
 
-      <a th:replace="~{fragments/footer/iconLinkFooter :: iconLinkFooter('images/linkedin.png', 'LinkedIn', 'https://www.linkedin.com/home?originalSubdomain=br')}"></a>
+      <a th:replace="~{fragments/footer/iconLinkFooter :: iconLinkFooter('../images/linkedin.png', 'LinkedIn', 'https://www.linkedin.com/home?originalSubdomain=br')}"></a>
     </div>
   </div>
 
