--- a/stocktrade/src/main/resources/templates/indexLogado.html
+++ b/stocktrade/src/main/resources/templates/indexLogado.html
@@ -181,14 +181,14 @@
 
         <div class="container-fluid mt-2 mb-2">
           <div class="row ms-5 mt-5">
-            <div class="col-md-6">
-              <h1 class="h2 fw-bold custom-padding-top">Notícias</h1>
+            <div class="col-md-6 text-center">
+              <h1 class="h2 fw-bold custom-padding-top custom-padding-right-index">Notícias</h1>
             </div>
           </div>
         </div>
 
         <div class="card-group justify-content-center">
-          <div class="mb-3 custom-card7 ms-5">
+          <div class="mb-3 custom-card7 ms-5 text-center">
             <img
               src="images/noticias-pic.png"
               class="img-fluid rounded-start"
@@ -205,12 +205,12 @@
               dinheiro.
             </p>
             <a
-              class="btn btn-outline-primary botao1 me-4 ms-5 justify-content-cente text-center"
+              class="btn btn-outline-primary botao1"
               >Investimentos</a
             >
           </div>
 
-          <div class="mb-3 custom-card7 ms-5">
+          <div class="mb-3 custom-card7 ms-5 text-center">
             <img
               src="images/noticias-pic-2.png"
               class="img-fluid rounded-top"
@@ -221,17 +221,17 @@
                 >Análises diárias do mercado financeiro</small
               >
             </p>
-            <p class="card-text">
+            <p class="card-text custom-padding-bottom-text">
               Acesse a ultíma análise completa do mercado, destacando as
               melhores ações para compra e venda na atualidade
             </p>
             <a
-              class="btn btn-outline-primary botao1 me-4 ms-5 justify-content-center text-center"
+              class="btn btn-outline-primary botao1"
               >Mercado</a
             >
           </div>
 
-          <div class="mb-3 custom-card7 ms-5">
+          <div class="mb-3 custom-card7 ms-5 text-center">
             <img
               src="images/noticias-pic-3.png"
               class="img-fluid rounded-top"
@@ -247,7 +247,7 @@
               Entenda o funcionamento desses ativos.
             </p>
             <a
-              class="btn btn-outline-primary botao1 me-2 ms-5 justify-content-center text-center"
+              class="btn btn-outline-primary botao1"
               >Ações</a
             >
           </div>
